// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Верстка <Message/> Загрузка 1`] = `
<div
  class="ui-message-notice move-up-enter"
>
  <div
    class="ui-message-notice-content"
  >
    <div
      class="sc-bxivhb dtvcyD"
      type="loading"
    >
      <div
        class="sc-ifAKCX bkWMT"
      >
        <div
          class="sc-bwzfXH iywVHW"
        >
          <div
            class="sc-htpNat dEfPuW"
          />
          <div
            class="sc-htpNat dEfPuW"
          />
          <div
            class="sc-htpNat dEfPuW"
          />
        </div>
      </div>
      <span>
        Message Title
      </span>
    </div>
  </div>
</div>
`;

exports[`Верстка <Message/> Информационное 1`] = `
<div
  class="ui-message-notice move-up-enter"
>
  <div
    class="ui-message-notice-content"
  >
    <div
      class="sc-bxivhb dtvcyD"
      type="info"
    >
      <svg
        aria-hidden="true"
        class="sc-EHOje dTLrWt sc-bdVaJa dTKkTG"
        focusable="false"
        viewBox="0 0 16 16"
      >
        <g
          transform="translate(-244 -1774)"
        >
          <path
            d="M244 1782a8 8 0 1 1 16 0 8 8 0 0 1-16 0z"
          />
        </g>
        <g
          transform="translate(-244 -1774)"
        >
          <path
            d="M252.35 1777.8a.94.94 0 0 0-.28.69c0 .26.1.5.29.68.19.19.41.28.67.28.27 0 .5-.1.69-.28a.93.93 0 0 0 .28-.68c0-.27-.1-.5-.28-.69a.93.93 0 0 0-.69-.28c-.26 0-.49.1-.68.28zm.7 2.74l-2.23.36-.09.27h.24a.5.5 0 0 1 .34.1c.09.08.13.16.13.26 0 .15-.05.38-.13.68l-.92 3.14c-.07.25-.11.46-.11.62 0 .25.08.45.25.6.17.17.4.25.68.25.75 0 1.45-.58 2.11-1.73l-.22-.13c-.28.42-.51.72-.71.88a.34.34 0 0 1-.22.1c-.05 0-.09-.02-.13-.06a.2.2 0 0 1-.06-.14c0-.08.04-.26.11-.52l1.35-4.68z"
            fill="#fff"
          />
        </g>
      </svg>
      <span>
        Message Title
      </span>
    </div>
  </div>
</div>
`;

exports[`Верстка <Message/> Ошибка 1`] = `
<div
  class="ui-message-notice move-up-enter"
>
  <div
    class="ui-message-notice-content"
  >
    <div
      class="sc-bxivhb hZMVDU"
      type="error"
    >
      <svg
        aria-hidden="true"
        class="sc-EHOje gUESjC sc-bdVaJa dTKkTG"
        focusable="false"
        viewBox="0 0 6 18"
      >
        <path
          d="M3.94 7l-1.49.49 1.43-5.23a1 1 0 0 0-.7-1.23 1 1 0 0 0-1.23.71L.04 8.75c-.1.36 0 .74.27.99s.65.34 1 .23l1.56-.51-.75 3.15a1 1 0 0 0 .97 1.23 1 1 0 0 0 .98-.77l1.15-4.89a.98.98 0 0 0-.29-.96A1 1 0 0 0 3.94 7zm-2.02 9.44c0 .26.11.53.29.72.19.18.44.29.71.29.26 0 .52-.11.71-.29.18-.19.29-.46.29-.72 0-.27-.11-.52-.29-.71a1.05 1.05 0 0 0-1.42 0c-.18.19-.29.45-.29.71z"
        />
      </svg>
      <span>
        Message Title
      </span>
    </div>
  </div>
</div>
`;

exports[`Верстка <Message/> Предупреждение 1`] = `
<div
  class="ui-message-notice move-up-enter"
>
  <div
    class="ui-message-notice-content"
  >
    <div
      class="sc-bxivhb dbqosp"
      type="warning"
    >
      <svg
        aria-hidden="true"
        class="sc-EHOje gUESjC sc-bdVaJa dTKkTG"
        focusable="false"
        viewBox="0 0 485.811 485.811"
      >
        <path
          d="M476.099,353.968l-170.2-294.8c-27.8-48.7-98.1-48.7-125.8,0l-170.3,294.8c-27.8,48.7,6.8,109.2,62.9,109.2h339.9C468.699,463.168,503.899,402.068,476.099,353.968z M242.899,397.768c-14.8,0-27.1-12.3-27.1-27.1s12.3-27.1,27.1-27.1c14.8,0,27.1,12.3,26.5,27.8C270.099,385.468,257.099,397.768,242.899,397.768z M267.599,222.568c-1.2,21-2.5,41.9-3.7,62.9c-0.6,6.8-0.6,13-0.6,19.7c-0.6,11.1-9.3,19.7-20.4,19.7s-19.7-8-20.4-19.1c-1.8-32.7-3.7-64.8-5.5-97.5c-0.6-8.6-1.2-17.3-1.9-25.9c0-14.2,8-25.9,21-29.6c13-3.1,25.9,3.1,31.5,15.4c1.9,4.3,2.5,8.6,2.5,13.6C269.499,195.468,268.199,209.068,267.599,222.568z"
        />
      </svg>
      <span>
        Message Title
      </span>
    </div>
  </div>
</div>
`;

exports[`Верстка <Message/> Успешное 1`] = `
<div
  class="ui-message-notice move-up-enter"
>
  <div
    class="ui-message-notice-content"
  >
    <div
      class="sc-bxivhb dtvcyD"
      type="success"
    >
      <svg
        aria-hidden="true"
        class="sc-EHOje rydpI sc-bdVaJa dTKkTG"
        focusable="false"
        viewBox="0 0 32.296 32.296"
      >
        <path
          d="M31.923,9.14L13.417,27.642c-0.496,0.494-1.299,0.494-1.793,0L0.37,16.316c-0.494-0.496-0.494-1.302,0-1.795l2.689-2.687c0.496-0.495,1.299-0.495,1.793,0l7.678,7.729L27.438,4.654c0.494-0.494,1.297-0.494,1.795,0l2.689,2.691C32.421,7.84,32.421,8.646,31.923,9.14z"
        />
      </svg>
      <span>
        Message Title
      </span>
    </div>
  </div>
</div>
`;
